# commits-loupe

./: .gitignore  .travis.yml  Cargo.toml  README.md  bootstrap.js  package.json  style.js  webpack.config.js
src/: app.rs  cache.rs  commit.rs  config.rs  dataset.rs  js_macros.rs  jslib.rs  lib.rs  query.rs  range.rs
src/api/: commit_metadata.rs  github.rs  mod.rs  static_metadata.rs
src/chart/: chartjs.rs  mod.rs
src/component/: chart.rs  container.rs  loupe.rs  mod.rs  table.rs
static/: index.html
